@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt gettext mkstemp pathmax regex restrict save-cwd stdbool vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt gettext mkstemp pathmax regex restrict save-cwd stdbool strcase vasnprintf xalloc xgetcwd xsize
 
 AC_DEFUN([gl_EARLY],
 [
@@ -38,6 +38,7 @@ AC_DEFUN([gl_INIT],
   gl_C_RESTRICT
   gl_SAVE_CWD
   AM_STDBOOL_H
+  gl_STRCASE
   gl_FUNC_VASNPRINTF
   gl_XALLOC
   gl_XGETCWD
